# ucode-cpp-marathon

sprint00/abondarenk/t00/: CMakeLists.txt
sprint00/abondarenk/t01/: printDialog.h
sprint00/abondarenk/t02/: walletManager.cpp  walletManager.h
sprint00/abondarenk/t03/: castSpells.cpp  castSpells.h
sprint00/abondarenk/t04/: referenceOrPointer.cpp  referenceOrPointer.h
sprint00/abondarenk/t05/: CMakeLists.txt  main.cpp
sprint00/abondarenk/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
sprint00/abondarenk/t07/: CMakeLists.txt  main.cpp
sprint00/abondarenk/t07/src/: CMakeLists.txt  inventory.cpp  inventory.h
sprint01/abondarenk/t00/: CMakeLists.txt  main.cpp
sprint01/abondarenk/t01/: CMakeLists.txt  main.cpp
sprint01/abondarenk/t02/: CMakeLists.txt  main.cpp
sprint01/abondarenk/t03/: CMakeLists.txt  main.cpp
sprint01/abondarenk/t04/: CMakeLists.txt  main.cpp
sprint01/abondarenk/t05/: CMakeLists.txt  main.cpp
sprint01/under_pdf/t00/: CMakeLists.txt  main.cpp
sprint01/under_pdf/t01/: CMakeLists.txt  main.cpp
sprint02/abondarenk/t00/: CMakeLists.txt  main.cpp
sprint02/abondarenk/t01/: CMakeLists.txt  main.cpp
sprint02/abondarenk/t02/: CMakeLists.txt  main.cpp
sprint02/abondarenk/t03/: CMakeLists.txt  main.cpp
sprint02/abondarenk/t03/src/: CMakeLists.txt  booksLibrary.cpp  booksLibrary.h
sprint03/abondarenk/t00/: templateAddition.h
sprint03/abondarenk/t01/: outputAny.h
sprint03/abondarenk/t02/: sumOfArguments.h
sprint03/abondarenk/t03/: sumFileData.h
sprint03/abondarenk/t04/: outputContainer.h
sprint03/abondarenk/t05/: squareValue.h
sprint03/abondarenk/t06/: isPalindrome.h
sprint03/abondarenk/t07/: sortValues.h
sprint04/abondarenk-2/t02/app/: CMakeLists.txt  main.cpp
sprint04/abondarenk-2/t02/app/src/: dragonborn.h
sprint04/abondarenk-2/t03/: CMakeLists.txt
sprint04/under_pdf/t01/: CMakeLists.txt
sprint04/under_pdf/t02/: CMakeLists.txt
sprint05/abondarenk/t05/: CMakeLists.txt
sprint05/under-pdf/t00/: CMakeLists.txt
sprint06/under-pdf/t00/: CMakeLists.txt
sprint07/abondarenk/t00/: CMakeLists.txt
sprint07/under_pdf/t00/app/: CMakeLists.txt  main.cpp
sprint07/under_pdf/t00/app/src/: CBLVector.h
sprint09/abondarenk/t02/: CMakeLists.txt
sprint09/abondarenk/t03/: CMakeLists.txt
sprint09/abondarenk/t04/: CMakeLists.txt
sprint09/abondarenk/t05/: CMakeLists.txt
sprint09/abondarenk/t05/app/src/: CMakeLists.txt  Log.cpp  Worker.cpp
sprint09/under_pdf/t04/app/: CMakeLists.txt
sprint09/under_pdf/t04/app/src/: Worker.h
(+105 files in other folders)
